--- a/TripPlanner/Pages/PlanDetails.xaml
+++ b/TripPlanner/Pages/PlanDetails.xaml
@@ -1,8 +1,8 @@
 ﻿<Page
-    x:Class="TripPlanner.MainPage"
+    x:Class="TripPlanner.Pages.PlanDetails"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    xmlns:local="using:TripPlanner"
+    xmlns:local="using:TripPlanner.Pages"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     mc:Ignorable="d">
@@ -15,18 +15,28 @@
         </Grid.RowDefinitions>
         <RelativePanel>
             <StackPanel Orientation="Horizontal" Padding="5" BorderThickness="1" >
-                <Button x:ConnectionId='3' Name="hamburgerButton" FontFamily="Segoe MDL2 Assets" Content="&#xE700;" FontSize="36"                               Background="{x:Null}"/>
-                <TextBlock Text="Home" FontFamily="Segoe UI" FontSize="30" Margin="20,5,0,0"/>
+                <Button Name="hamburgerButton" FontFamily="Segoe MDL2 Assets" Content="&#xE700;" FontSize="36" Click="hamburgerButton_Click" Background="{x:Null}"/>
+                <TextBlock Text="Plan Details" FontFamily="Segoe UI" FontSize="30" Margin="20,5,0,0"/>
+                <Button Name="editPlanBtn" FontFamily="Segoe MDL2 Assets" Content="&#xE104;" FontSize="25" Background="{x:Null}" Margin="50,0,0,0" Click="editPlanBtn_Click"/>
             </StackPanel>
         </RelativePanel>
-        <SplitView x:ConnectionId='1' Name="mySplitView" 
+        <StackPanel Grid.Row="1">
+            <StackPanel HorizontalAlignment="Center">
+                <TextBlock x:Name="planDate" FontSize="20"/>
+
+            </StackPanel>
+            <StackPanel HorizontalAlignment="Center">
+                <TextBlock x:Name="location" FontSize="20"/>
+            </StackPanel>
+        </StackPanel>
+        <SplitView Name="mySplitView" 
                    Grid.Row="1" 
                    OpenPaneLength="370" 
                    DisplayMode="CompactOverlay" 
                    CompactPaneLength="0" 
                    HorizontalAlignment="Left">
             <SplitView.Pane>
-                <ListBox x:ConnectionId='2' SelectionMode="Single" Name="menuItems"                                              >
+                <ListBox SelectionMode="Single" Name="menuItems" SelectionChanged="menuItems_SelectionChanged">
                     <ListBoxItem>
                         <StackPanel Orientation="Horizontal">
                             <TextBlock FontFamily="Segoe MDL2 Assets" FontSize="25" Text="&#xE81C;"/>
@@ -54,40 +64,45 @@
                 </ListBox>
             </SplitView.Pane>
         </SplitView>
+        
     </Grid>
     <Page.BottomAppBar>
         <CommandBar>
-            <AppBarButton x:ConnectionId='4' x:Name="addNewPlan"
+            <AppBarButton x:Name="addNewEvent"
                           Icon="Add"
                           Label="New"
-                          ToolTipService.ToolTip="Click here to add a new trip plan."
-                                                   Background="Transparent" Foreground="#FF00B83A"/>
-            <AppBarButton x:ConnectionId='5' x:Name="selectPlan"
+                          ToolTipService.ToolTip="Click here to add a new activity."
+                          Click="addNewEvent_Click" Background="Transparent" Foreground="#FF00B83A"/>
+            <AppBarButton x:Name="addFavorite"
+                          Icon="Favorite"
+                          Label="New"
+                          ToolTipService.ToolTip="Click here to add this plan to Favorite list."
+                          Click="addFavorite_Click" Background="{x:Null}" Foreground="#FFE2AF01"/>
+            <AppBarButton x:Name="selectPlan"
                           Icon="SelectAll"
                           Label="Select"
                           ToolTipService.ToolTip="Click here to select s plan."
                           Background="Transparent"
-                                                  />
-           
-            <AppBarButton x:ConnectionId='6' x:Name="deletePlan"
+                          Click="selectPlan_Click"/>
+
+            <AppBarButton x:Name="deletePlan"
                           Icon="Delete"
                           Label="Delete"
                           ToolTipService.ToolTip="Click here to deleted selected plans."
-                                                   Foreground="Red" Visibility="Collapsed"
+                          Click="deletePlan_Click" Foreground="Red" Visibility="Collapsed"
                           />
-            <AppBarButton x:ConnectionId='7' x:Name="editPlan"
+            <AppBarButton x:Name="editPlan"
                           Icon="Edit"
                           Label="Edit"
                           ToolTipService.ToolTip="Click here to edit a plan"
-                                                   Foreground="Black" Visibility="Collapsed"/>
-            <AppBarButton x:ConnectionId='8' x:Name="cancelPlan"
+                          Click="deletePlan_Click" Foreground="Black" Visibility="Collapsed"/>
+            <AppBarButton x:Name="cancelPlan"
                           Icon="Back"
                           Label="Back"
                           ToolTipService.ToolTip="Click here cancel selection"
-                                                   Foreground="Black" Visibility="Collapsed"/>
-            
-            
+                          Click="cancelPlan_Click" Foreground="Black" Visibility="Collapsed"/>
+
+
         </CommandBar>
     </Page.BottomAppBar>
 </Page>
-
