--- a/TripPlanner/Pages/DayEvents.xaml
+++ b/TripPlanner/Pages/DayEvents.xaml
@@ -1,5 +1,5 @@
 ﻿<Page
-    x:Class="TripPlanner.Pages.PlanDetails"
+    x:Class="TripPlanner.Pages.DayEvents"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:local="using:TripPlanner.Pages"
@@ -15,32 +15,18 @@
         </Grid.RowDefinitions>
         <RelativePanel>
             <StackPanel Orientation="Horizontal" Padding="5" BorderThickness="1" >
-                <Button x:ConnectionId='6' Name="hamburgerButton" FontFamily="Segoe MDL2 Assets" Content="&#xE700;" FontSize="36"                               Background="{x:Null}"/>
-                <TextBlock Text="Plan Details" FontFamily="Segoe UI" FontSize="30" Margin="20,5,0,0"/>
-                <Button x:ConnectionId='7' Name="editPlanBtn" FontFamily="Segoe MDL2 Assets" Content="&#xE104;" FontSize="25" Background="{x:Null}" Margin="50,0,0,0"                          />
+                <Button Name="hamburgerButton" FontFamily="Segoe MDL2 Assets" Content="&#xE700;" FontSize="36" Click="hamburgerButton_Click" Background="{x:Null}"/>
+                <TextBlock x:Name="pageTitle" FontFamily="Segoe UI" FontSize="30" Margin="20,5,0,0"/>
             </StackPanel>
         </RelativePanel>
-        <StackPanel Grid.Row="1">
-            <StackPanel HorizontalAlignment="Center">
-                <TextBlock x:ConnectionId='5' x:Name="planDate" FontSize="20"/>
-
-            </StackPanel>
-            <StackPanel HorizontalAlignment="Center">
-                <TextBlock x:ConnectionId='4' x:Name="location" FontSize="20"/>
-            </StackPanel>
-
-            <StackPanel HorizontalAlignment="Center">
-                <TextBlock x:ConnectionId='3' x:Name="testMaxDay" FontSize="20"/>
-            </StackPanel>
-        </StackPanel>
-        <SplitView x:ConnectionId='1' Name="mySplitView" 
+        <SplitView Name="mySplitView" 
                    Grid.Row="1" 
                    OpenPaneLength="370" 
                    DisplayMode="CompactOverlay" 
                    CompactPaneLength="0" 
                    HorizontalAlignment="Left">
             <SplitView.Pane>
-                <ListBox x:ConnectionId='2' SelectionMode="Single" Name="menuItems"                                              >
+                <ListBox SelectionMode="Single" Name="menuItems" SelectionChanged="menuItems_SelectionChanged">
                     <ListBoxItem>
                         <StackPanel Orientation="Horizontal">
                             <TextBlock FontFamily="Segoe MDL2 Assets" FontSize="25" Text="&#xE81C;"/>
@@ -68,46 +54,39 @@
                 </ListBox>
             </SplitView.Pane>
         </SplitView>
-        
     </Grid>
     <Page.BottomAppBar>
         <CommandBar>
-            <AppBarButton x:ConnectionId='8' x:Name="addNewEvent"
+            <AppBarButton x:Name="addNewActivity"
                           Icon="Add"
                           Label="New"
-                          ToolTipService.ToolTip="Click here to add a new activity."
-                                                    Background="Transparent" Foreground="#FF00B83A"/>
-            <AppBarButton x:ConnectionId='9' x:Name="addFavorite"
-                          Icon="Favorite"
-                          Label="New"
-                          ToolTipService.ToolTip="Click here to add this plan to Favorite list."
-                                                    Background="{x:Null}" Foreground="#FFE2AF01"/>
-            <AppBarButton x:ConnectionId='10' x:Name="selectEvent"
+                          ToolTipService.ToolTip="Click here to add new activity"
+                          Click="addNewActivities_Click" Background="Transparent" Foreground="#FF00B83A"/>
+            <AppBarButton x:Name="selectActivities"
                           Icon="SelectAll"
                           Label="Select"
-                          ToolTipService.ToolTip="Click here to select s plan."
+                          ToolTipService.ToolTip="Click here to select activities"
                           Background="Transparent"
-                                                   />
+                          Click="selectActivities_Click"/>
 
-            <AppBarButton x:ConnectionId='11' x:Name="deleteEvent"
+            <AppBarButton x:Name="deleteActivities"
                           Icon="Delete"
                           Label="Delete"
-                          ToolTipService.ToolTip="Click here to deleted selected plans."
-                                                    Foreground="Red" Visibility="Collapsed"
+                          ToolTipService.ToolTip="Click here to deleted selected activities."
+                          Click="deleteActivities_Click" Foreground="Red" Visibility="Collapsed"
                           />
-            <AppBarButton x:ConnectionId='12' x:Name="editEvent"
+            <AppBarButton x:Name="editActivity"
                           Icon="Edit"
                           Label="Edit"
-                          ToolTipService.ToolTip="Click here to edit a plan"
-                                                  Foreground="Black" Visibility="Collapsed"/>
-            <AppBarButton x:ConnectionId='13' x:Name="cancelPlan"
+                          ToolTipService.ToolTip="Click here to edit an activity"
+                          Click="editActivity_Click" Foreground="Black" Visibility="Collapsed"/>
+            <AppBarButton x:Name="cancel"
                           Icon="Cancel"
                           Label="Cancel"
                           ToolTipService.ToolTip="Click here cancel selection"
-                                                   Foreground="Red" Visibility="Collapsed"/>
+                          Click="cancel_Click" Foreground="Red" Visibility="Collapsed"/>
 
 
         </CommandBar>
     </Page.BottomAppBar>
 </Page>
-
