--- a/TripPlanner/Pages/PlanDetails.xaml
+++ b/TripPlanner/Pages/PlanDetails.xaml
@@ -37,15 +37,16 @@
                 <TextBlock x:Name="testMaxDay" FontSize="20"/>
             </StackPanel>
             <StackPanel>
-                <ListBox ItemsSource="{x:Bind DaysList}">
+                <ListBox x:Name="dayListBox" ItemsSource="{x:Bind DaysList}" Background="White" SelectionChanged="ListBox_SelectionChanged">
                     <ListBox.ItemTemplate>
                         <DataTemplate x:DataType="data:Days">
-                            <StackPanel>
-                                <TextBlock Text="{x:Bind DayNo}"/>
+                            <StackPanel MinWidth="400" Background="Azure">
+                                <TextBlock Text="{x:Bind DayNo}" FontSize="25"/>
                                 <TextBlock Text="{x:Bind NumberOfEvents}"/>
                             </StackPanel>
                         </DataTemplate>
                     </ListBox.ItemTemplate>
+                    
                 </ListBox>
             </StackPanel>
         </StackPanel>
