--- a/TripPlanner/Pages/PlanDetails.xaml
+++ b/TripPlanner/Pages/PlanDetails.xaml
@@ -20,6 +20,7 @@
         <RelativePanel>
             <StackPanel Orientation="Horizontal" Padding="5" BorderThickness="1" >
                 <Button Name="hamburgerButton" FontFamily="Segoe MDL2 Assets" Content="&#xE700;" FontSize="36" Click="hamburgerButton_Click" Background="{x:Null}"/>
+                <Button Name="backBtn" FontFamily="Segoe MDL2 Assets" Content="&#xE0A6;" FontSize="30" Click="backBtn_Click" Visibility="Collapsed" Background="{x:Null}"/>
                 <TextBlock Text="Plan Details" FontFamily="Segoe UI" FontSize="30" Margin="20,5,0,0"/>
                 <Button Name="editPlanBtn" FontFamily="Segoe MDL2 Assets" Content="&#xE104;" FontSize="25" Background="{x:Null}" Margin="50,0,0,0" Click="editPlanBtn_Click"/>
             </StackPanel>
@@ -36,7 +37,7 @@
             <StackPanel HorizontalAlignment="Center">
                 <TextBlock x:Name="testMaxDay" FontSize="20"/>
             </StackPanel>
-            <StackPanel>
+            <!--<StackPanel>
                 <ListBox x:Name="dayListBox" ItemsSource="{x:Bind DaysList}" Background="White" SelectionChanged="ListBox_SelectionChanged">
                     <ListBox.ItemTemplate>
                         <DataTemplate x:DataType="data:Days">
@@ -48,7 +49,18 @@
                     </ListBox.ItemTemplate>
                     
                 </ListBox>
-            </StackPanel>
+            </StackPanel>-->
+            <GridView x:Name="gridViewDayList" ItemsSource="{x:Bind DaysList}" ItemClick="GridView_ItemClick" IsItemClickEnabled="True">
+                <GridView.ItemTemplate>
+                    <DataTemplate x:DataType="data:Days">
+                        <StackPanel MinWidth="400" Background="Azure">
+                            <TextBlock Text="{x:Bind DayNo}" FontSize="25"/>
+                            <TextBlock Text="{x:Bind NumberOfEvents}"/>
+                        </StackPanel>
+                    </DataTemplate>
+                </GridView.ItemTemplate>
+                
+            </GridView>
         </StackPanel>
         
         <SplitView Name="mySplitView" 
